# string-alg

./: .dockerignore  .gitignore  Bm.cpp  Bm.h  CMakeLists.txt  Dockerfile  Kmp.cpp  Kmp.h  README.md  Rle.cpp  Rle.h  StringAlg.h  StringTest.cpp  VectorArray.h  main.cpp
.github/workflows/: docker-image.yml
test/: ArchiveTest.cpp  CMakeLists.txt  StringTest.cpp  main.cpp
test/test_files/: file1  file1.rle  file1.rle2  file2  file2.rle  file2.rle2
